--- a/images/iconset/Neue Blickwinkel - 2nd Ed/default.css
+++ b/images/iconset/Neue Blickwinkel - 2nd Ed/default.css
@@ -1,92 +1,92 @@
 .page #headermenu
 {
-	font-size: 1vw;
+    font-size: 1vw;
 }
 
 .page #headermenu a
 {
-	color: #1a1a1a;
+    color: #1a1a1a;
 }
 
 .ui-widget-header
 {
-	background: #d01820;
-	border: 0px;
-	color: #ffffff;
+    background: #000000;
+    border: 0px;
+    color: #ffffff;
 }
 
 .ui-state-default,
-.ui-widget-content .ui-state-default, 
+.ui-widget-content .ui-state-default,
 .ui-widget-header .ui-state-default
 {
-	background: #d01820;
-	border: 1px solid #d01820;
-	color: #ffffff;
+    background: #000000;
+    border: 1px solid #000000;
+    color: #ffffff;
 }
 
 .ui-state-default a,
 .ui-state-default a:link,
 .ui-state-default a:visited
 {
-	color: #ffffff;
+    color: #ffffff;
 }
 
 .ui-state-active,
-.ui-widget-content .ui-state-active, 
+.ui-widget-content .ui-state-active,
 .ui-widget-header .ui-state-active
 {
-	background: white;
-	color: #d01820;
+    background: white;
+    color: #000000;
 }
 
 .ui-state-hover,
-.ui-widget-content .ui-state-hover, 
+.ui-widget-content .ui-state-hover,
 .ui-widget-header .ui-state-hover
 {
-	background: white;
-	color: #d01820;
+    background: white;
+    color: #000000;
 }
 
 .ui-state-hover a,
 .ui-state-hover a:link,
 .ui-state-hover a:visited
 {
-	color: #d01820;
+    color: #000000;
 }
 
 .ui-state-active a,
 .ui-state-active a:link,
 .ui-state-active a:visited
 {
-	color: #d01820;
+    color: #000000;
 }
 
 html, body
 {
-	color: #555555;
+    color: #555555;
 }
 
 a
 {
-	color: #428bca;
+    color: #428bca;
 }
- 
+
 footer
 {
-	background: #d01820;
-	color: white;
+    background: #f6d45b;
+    color: #222222;
 }
 
 .ui-button-text-only .ui-button-text{
-padding:5px;
+    padding:5px;
 }
- footer a {
-    color: white;
+footer a {
+    color: #222222;
     text-decoration: underline;
     -moz-text-decoration-style: dotted;
     -webkit-text-decoration-style: dotted; }
-    footer a:hover, footer a:active, footer a:focus, footer a:visited {
-      color: white;
-      text-decoration: underline;
-      -moz-text-decoration-style: dotted;
-      -webkit-text-decoration-style: dotted; }
+footer a:hover, footer a:active, footer a:focus, footer a:visited {
+    color: #222222;
+    text-decoration: underline;
+    -moz-text-decoration-style: dotted;
+    -webkit-text-decoration-style: dotted; }
